Bouton "login with trello"

--- a/hw-extension/helloworld.html
+++ b/hw-extension/helloworld.html
@@ -4,5 +4,7 @@
 </head>
 
 <body onload="saluer()">
-    <h3> Hello world ! </h3></body>
+    <h3> Trellogement </h3>
+    <button id="trelloLogin"> Login with Trello </button>
+</body>
 </html>
