Mise en place de nom

--- a/hw-extension/helloworld.html
+++ b/hw-extension/helloworld.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="jquery-1.7.1.min.js"></script>
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="https://api.trello.com/1/client.js?key=018a68969f1750d6605d17e39f0156db"></script>
   <script src="helloworld.js"></script>
 </head>
