--- a/trelloGementExtension/settings/index.html
+++ b/trelloGementExtension/settings/index.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <script src="../scripts/key.js"></script>
-  <script src="../lib/jquery-2.1.1.min.js"></script>
+  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
   <script src="../lib/trello-client.js"></script>
   <script src="../lib/hashSearch.js"></script>
   <script src="js/settings.js"></script>
