adapting scrapping function to new structure of branch 5-connect-to-trello

--- a/trelloGementExtension/settings/index.html
+++ b/trelloGementExtension/settings/index.html
@@ -17,6 +17,7 @@
       </div>
       <div class="panel" id="trello_helper_loggedin" style="display: none">
         <p>Vous êtes bien connecté.</p>
+        <button id="selogerScrapping" class="btn btn-secondary">Scrap page</button>
         <a href="#" class="btn btn-default" id="trello_helper_logout">Se déconnecter</a><br/>
       </div>
 
@@ -29,6 +30,7 @@
   <script src="../node_modules/jquery/dist/jquery.min.js"></script>
   <script src="../lib/trello-client.js"></script>
   <script src="../lib/hashSearch.js"></script>
+  <script src="../scripts/scrapping.js"></script>
   <script src="js/settings.js"></script>
 </body>
 </html>
