--- a/trelloGementExtension/background.html
+++ b/trelloGementExtension/background.html
@@ -2,8 +2,20 @@
 <script type="text/javascript" src="fancy-settings/source/lib/store.js"></script>
 <script type="text/javascript" src="scripts/background.js"></script>
 
-<!-- 
-Place HTML content here if you need it, or include more JS 
+<script>
+function install_notice() {
+    if (localStorage.getItem('install_time'))
+        return;
+
+    var now = new Date().getTime();
+    localStorage.setItem('install_time', now);
+    chrome.tabs.create({url: "help.html"});
+}
+install_notice();
+</script>
+
+<!--
+Place HTML content here if you need it, or include more JS
 This is a background page and as such, it persists across the lifetime of
 the extension, as opposted to event pages:
 http://developer.chrome.com/extensions/event_pages.html
