add target="_blank" for seloger.com links

--- a/trelloGementExtension/help.html
+++ b/trelloGementExtension/help.html
@@ -26,20 +26,20 @@
 
       <div class="panel panel-default">
         <div class="panel-body">
-          <p>Naviguez sur le site <a href="http://www.seloger.com/">seloger.com</a> pour trouver les offres qui vous intéressent.</p>
+          <p>Naviguez sur le site <a target="_blank" href="http://www.seloger.com/">seloger.com</a> pour trouver les offres qui vous intéressent.</p>
 
           <p>Vous pouvez ajouter une offre à votre board en cliquant sur le "+" en bas de page et
              vous pouvez consulter sur Trello la carte précédemment ajoutée en cliquant sur l'oeil. </p>
 
           <p><b> TODO : mettre un screeshot </b></p>
 
-          <p> Une fois l'offre ajoutée, vous pouvez changer son statut directement depuis <a href="http://www.seloger.com/">seloger.com</a> à l'aide du menu déroulant.
+          <p> Une fois l'offre ajoutée, vous pouvez changer son statut directement depuis <a target="_blank" href="http://www.seloger.com/">seloger.com</a> à l'aide du menu déroulant.
               Les statuts correspondent aux colonnes de votre board, vous pouvez en rajouter ou en enlever. </p>
 
           <p><b> TODO : mettre un screeshot </b></p>
 
           <p> Les offres que vous avez enregistrées sont également indiquées dans la liste lorsque que vous faites une recherche
-              sur <a href="http://www.seloger.com/">seloger.com.</a> Vous pouvez donc éviter d'aller toujours revoir les mêmes offres ! </p>
+              sur <a target="_blank" href="http://www.seloger.com/">seloger.com.</a> Vous pouvez donc éviter d'aller toujours revoir les mêmes offres ! </p>
 
           <p><b> TODO : mettre un screeshot </b></p>
         </div>
