Added mailto functionality

--- a/trelloGementExtension/settings/popup.html
+++ b/trelloGementExtension/settings/popup.html
@@ -14,19 +14,12 @@
         <h1 style="font-size:300%;">TrelloGement</h1>
         <div class="panel" id="feedback_trellogement">
           <p>Une remarque ? N'hésitez pas à la partager avec nous et on fera tout notre possible pour réaliser votre bonheur (dans la limite du logement).</p>
-          <a href="#" class="btn btn-primary" id="feedback_trellogement">Ecrivez-nous !</a><br/>
+          <a href="mailto:paul.de-nonancourt@student.ecp.fr" class="btn btn-primary" id="feedback_trellogement">Ecrivez-nous !</a><br/>
         </div>
 
       </div>
 
     </div>
-
-    <!-- <script src="../scripts/key.js"></script>
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../lib/trello-client.js"></script>
-    <script src="../lib/hashSearch.js"></script>
-    <script src="../scripts/scrapping.js"></script>
-    <script src="js/settings.js"></script> -->
 
   </body>
 </html>
